Bug 1108040 - Make splitter visible when inspector is docked to side by properly overriding the vertical styles and applying the horizontal styles;r=vporof
UltraBlame original commit: f5acd76febf5646bace610d6522cd863d02849d7

--- a/browser/themes/shared/devtools/widgets.inc.css
+++ b/browser/themes/shared/devtools/widgets.inc.css
@@ -50,13 +50,20 @@
   }
 
   .devtools-responsive-container > .devtools-side-splitter {
-    border-width: 0;
-    border-top-width: 1px;
-    border-top-style: solid;
-    margin: 0;
+    
+
     min-height: 3px;
     height: 3px;
-    margin-bottom: -3px;
+    margin-top: -3px;
+
+    
+    border-width: 0;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    -moz-margin-start: 0;
+    width: auto;
+    min-width: 0;
+
     
     cursor: n-resize;
   }
